Refactor endpoint imports and add new culture and embassy request handlers

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -8,6 +8,23 @@
     <ItemGroup>
         <Compile Include="domain\Constants.fs" />
         <Compile Include="domain\Chat.fs" />
+        <Compile Include="endpoints\culture\Get.fs" />
+        <Compile Include="endpoints\culture\Request.fs" />
+        <Compile Include="endpoints\users\Get.fs" />
+        <Compile Include="endpoints\users\Request.fs" />
+        <Compile Include="endpoints\embassies\Get.fs" />
+        <Compile Include="endpoints\embassies\Request.fs" />
+        <Compile Include="endpoints\embassies\russian\kdmid\Get.fs" />
+        <Compile Include="endpoints\embassies\russian\kdmid\Post.fs" />
+        <Compile Include="endpoints\embassies\russian\kdmid\Delete.fs" />
+        <Compile Include="endpoints\embassies\russian\kdmid\Request.fs" />
+        <Compile Include="endpoints\embassies\russian\midpass\Get.fs" />
+        <Compile Include="endpoints\embassies\russian\midpass\Request.fs" />
+        <Compile Include="endpoints\embassies\russian\Get.fs" />
+        <Compile Include="endpoints\embassies\russian\Post.fs" />
+        <Compile Include="endpoints\embassies\russian\Delete.fs" />
+        <Compile Include="endpoints\embassies\russian\Request.fs" />
+        <Compile Include="endpoints\Request.fs" />
         <Compile Include="data_access\Chat.fs" />
         <Compile Include="dependencies\Persistence.fs" />
         <Compile Include="dependencies\consumer\Consumer.fs" />
@@ -19,23 +36,6 @@
         <Compile Include="dependencies\consumer\Users.fs" />
         <Compile Include="dependencies\producer\Producer.fs" />
         <Compile Include="dependencies\producer\embassies\russian\Kdmid.fs" />
-        <Compile Include="endpoints\consumer\culture\Get.fs" />
-        <Compile Include="endpoints\consumer\culture\Request.fs" />
-        <Compile Include="endpoints\consumer\users\Get.fs" />
-        <Compile Include="endpoints\consumer\users\Request.fs" />
-        <Compile Include="endpoints\consumer\embassies\Get.fs" />
-        <Compile Include="endpoints\consumer\embassies\Request.fs" />
-        <Compile Include="endpoints\consumer\embassies\russian\kdmid\Get.fs" />
-        <Compile Include="endpoints\consumer\embassies\russian\kdmid\Post.fs" />
-        <Compile Include="endpoints\consumer\embassies\russian\kdmid\Delete.fs" />
-        <Compile Include="endpoints\consumer\embassies\russian\kdmid\Request.fs" />
-        <Compile Include="endpoints\consumer\embassies\russian\midpass\Get.fs" />
-        <Compile Include="endpoints\consumer\embassies\russian\midpass\Request.fs" />
-        <Compile Include="endpoints\consumer\embassies\russian\Get.fs" />
-        <Compile Include="endpoints\consumer\embassies\russian\Post.fs" />
-        <Compile Include="endpoints\consumer\embassies\russian\Delete.fs" />
-        <Compile Include="endpoints\consumer\embassies\russian\Request.fs" />
-        <Compile Include="endpoints\consumer\Request.fs" />
         <Compile Include="services\embassies\russian\Service.fs" />
         <Compile Include="services\consumer\embassies\russian\kdmid\Query.fs" />
         <Compile Include="services\consumer\embassies\russian\kdmid\Command.fs" />
@@ -46,13 +46,13 @@
         <Compile Include="services\consumer\users\Service.fs" />
         <Compile Include="services\consumer\culture\Service.fs" />
         <Compile Include="services\producer\embassies\russian\Service.fs" />
-        <Compile Include="controllers\consumer\culture\Culture.fs" />
-        <Compile Include="controllers\consumer\users\Users.fs" />
-        <Compile Include="controllers\consumer\embassies\Embassies.fs" />
-        <Compile Include="controllers\consumer\embassies\russian\Kdmid.fs" />
-        <Compile Include="controllers\consumer\embassies\russian\Midpass.fs" />
-        <Compile Include="controllers\consumer\embassies\russian\Russian.fs" />
-        <Compile Include="controllers\consumer\Controller.fs" />
+        <Compile Include="controllers\culture\Culture.fs" />
+        <Compile Include="controllers\users\Users.fs" />
+        <Compile Include="controllers\embassies\Embassies.fs" />
+        <Compile Include="controllers\embassies\russian\Kdmid.fs" />
+        <Compile Include="controllers\embassies\russian\Midpass.fs" />
+        <Compile Include="controllers\embassies\russian\Russian.fs" />
+        <Compile Include="controllers\Controller.fs" />
         <Compile Include="Consumer.fs" />
     </ItemGroup>
 
