--- a/.gitmodules
+++ b/.gitmodules
@@ -14,7 +14,7 @@
 	path = submodules/fsharp-infrastructure
 	url = https://github.com/masterlifting/fsharp-infrastructure.git
 	branch = dev
-[submodule "submodules/fsharp-multilang"]
-	path = submodules/fsharp-multilang
-	url = https://github.com/masterlifting/fsharp-multilang
+[submodule "submodules/fsharp-ai-provider"]
+	path = submodules/fsharp-ai-provider
+	url = https://github.com/masterlifting/fsharp-ai-provider.git
 	branch = main
