Refactor dependencies: rename CultureDeps to Culture and RussianDeps to Russian for consistency across modules

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="domain\Types.fs" />
         <Compile Include="domain\Constants.fs" />
         <Compile Include="domain\Chat.fs" />
         <Compile Include="endpoints\culture\Get.fs" />
@@ -27,10 +28,9 @@
         <Compile Include="endpoints\embassies\russian\Request.fs" />
         <Compile Include="endpoints\Request.fs" />
         <Compile Include="data_access\Chat.fs" />
-        <Compile Include="dependencies\AIProvider.fs" />
-        <Compile Include="dependencies\Persistence.fs" />
+        <Compile Include="dependencies\Culture.fs" />
         <Compile Include="dependencies\consumer\Consumer.fs" />
-        <Compile Include="dependencies\consumer\Culture.fs" />
+        <Compile Include="dependencies\consumer\Request.fs" />
         <Compile Include="dependencies\consumer\embassies\russian\Russian.fs" />
         <Compile Include="dependencies\consumer\embassies\russian\Midpass.fs" />
         <Compile Include="dependencies\consumer\embassies\russian\Kdmid.fs" />
