Refactor culture service: rename Types module to Aliases, enhance error handling in translation functions, and streamline OpenAI request/response handling

--- a/src/embassy-access-worker/appsettings.yaml
+++ b/src/embassy-access-worker/appsettings.yaml
@@ -172,8 +172,8 @@ Embassies:
   Name: Embassies
   Description: Select the embassy you want to visit
   Children:
-    - Id: ENG
-      Name: English
+    - Id: RUS
+      Name: Russian
       Description: In which country is the Russian Embassy located?
       Children:
         - Id: SRB
