--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="domain\Types.fs" />
+        <Compile Include="domain\Aliases.fs" />
         <Compile Include="domain\Constants.fs" />
         <Compile Include="domain\Chat.fs" />
         <Compile Include="endpoints\culture\Get.fs" />
@@ -38,6 +38,7 @@
         <Compile Include="dependencies\consumer\Users.fs" />
         <Compile Include="dependencies\producer\Producer.fs" />
         <Compile Include="dependencies\producer\embassies\russian\Kdmid.fs" />
+        <Compile Include="services\culture\payloads\Error.fs" />
         <Compile Include="services\culture\payloads\ButtonsGroup.fs" />
         <Compile Include="services\culture\payloads\Text.fs" />
         <Compile Include="services\culture\Query.fs" />
