Refactor translation handling: update response item mapping to use default values and include Culture.json in project

--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -30,6 +30,7 @@
         </Content>
         <Content Include="data\Chats.json" />
         <Content Include="data\Requests.json" />
+        <Content Include="data\Culture.json" />
     </ItemGroup>
 
     <ItemGroup>
