Refactor culture command handling: enhance translation functions and streamline dependency management for improved clarity

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -28,6 +28,7 @@
         <Compile Include="endpoints\embassies\russian\Request.fs" />
         <Compile Include="endpoints\Request.fs" />
         <Compile Include="data_access\Chat.fs" />
+        <Compile Include="dependencies\Culture.fs" />
         <Compile Include="dependencies\consumer\Culture.fs" />
         <Compile Include="dependencies\consumer\Consumer.fs" />
         <Compile Include="dependencies\consumer\Request.fs" />
@@ -43,8 +44,9 @@
         <Compile Include="services\culture\payloads\Error.fs" />
         <Compile Include="services\culture\payloads\ButtonsGroup.fs" />
         <Compile Include="services\culture\payloads\Text.fs" />
-        <Compile Include="services\culture\Command.fs" />
         <Compile Include="services\embassies\russian\Service.fs" />
+        <Compile Include="services\producer\culture\Command.fs" />
+        <Compile Include="services\producer\embassies\russian\Service.fs" />
         <Compile Include="services\consumer\culture\Query.fs" />
         <Compile Include="services\consumer\culture\Command.fs" />
         <Compile Include="services\consumer\embassies\russian\kdmid\Query.fs" />
@@ -54,8 +56,6 @@
         <Compile Include="services\consumer\embassies\russian\Service.fs" />
         <Compile Include="services\consumer\embassies\Service.fs" />
         <Compile Include="services\consumer\users\Service.fs" />
-        <Compile Include="services\producer\culture\Command.fs" />
-        <Compile Include="services\producer\embassies\russian\Service.fs" />
         <Compile Include="controllers\culture\Culture.fs" />
         <Compile Include="controllers\users\Users.fs" />
         <Compile Include="controllers\embassies\Embassies.fs" />
