--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -12,6 +12,7 @@
         <Compile Include="dependencies\Web.fs" />
         <Compile Include="dependencies\Persistence.fs" />
         <Compile Include="dependencies\AIProvider.fs" />
+        <Compile Include="dependencies\Culture.fs" />
         <Compile Include="dependencies\embassy-access-telegram\Consumer.fs" />
         <Compile Include="dependencies\embassy-access-telegram\Producer.fs" />
         <Compile Include="dependencies\embassies\Russian.fs" />
