--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -29,7 +29,13 @@
         <Compile Include="endpoints\Request.fs" />
         <Compile Include="data_access\Chat.fs" />
         <Compile Include="dependencies\Culture.fs" />
+        <Compile Include="dependencies\producer\Culture.fs" />
+        <Compile Include="dependencies\producer\Persistence.fs" />
+        <Compile Include="dependencies\producer\Producer.fs" />
+        <Compile Include="dependencies\producer\Request.fs" />
+        <Compile Include="dependencies\producer\embassies\russian\Kdmid.fs" />
         <Compile Include="dependencies\consumer\Culture.fs" />
+        <Compile Include="dependencies\consumer\Persistence.fs" />
         <Compile Include="dependencies\consumer\Consumer.fs" />
         <Compile Include="dependencies\consumer\Request.fs" />
         <Compile Include="dependencies\consumer\embassies\russian\Russian.fs" />
@@ -37,10 +43,6 @@
         <Compile Include="dependencies\consumer\embassies\russian\Kdmid.fs" />
         <Compile Include="dependencies\consumer\embassies\Embassies.fs" />
         <Compile Include="dependencies\consumer\Users.fs" />
-        <Compile Include="dependencies\producer\Culture.fs" />
-        <Compile Include="dependencies\producer\Producer.fs" />
-        <Compile Include="dependencies\producer\Request.fs" />
-        <Compile Include="dependencies\producer\embassies\russian\Kdmid.fs" />
         <Compile Include="services\culture\payloads\Error.fs" />
         <Compile Include="services\culture\Command.fs" />
         <Compile Include="services\embassies\russian\Service.fs" />
