--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -29,13 +29,13 @@
         <Compile Include="endpoints\Request.fs" />
         <Compile Include="data_access\Chat.fs" />
         <Compile Include="dependencies\Culture.fs" />
+        <Compile Include="dependencies\Web.fs" />
+        <Compile Include="dependencies\Persistence.fs" />
         <Compile Include="dependencies\producer\Culture.fs" />
         <Compile Include="dependencies\producer\Persistence.fs" />
         <Compile Include="dependencies\producer\Producer.fs" />
         <Compile Include="dependencies\producer\Request.fs" />
         <Compile Include="dependencies\producer\embassies\russian\Kdmid.fs" />
-        <Compile Include="dependencies\consumer\Culture.fs" />
-        <Compile Include="dependencies\consumer\Persistence.fs" />
         <Compile Include="dependencies\consumer\Consumer.fs" />
         <Compile Include="dependencies\consumer\Request.fs" />
         <Compile Include="dependencies\consumer\embassies\russian\Russian.fs" />
@@ -44,21 +44,18 @@
         <Compile Include="dependencies\consumer\embassies\Embassies.fs" />
         <Compile Include="dependencies\consumer\Users.fs" />
         <Compile Include="services\culture\payloads\Error.fs" />
+        <Compile Include="services\culture\payloads\Text.fs" />
+        <Compile Include="services\culture\payloads\ButtonsGroup.fs" />
+        <Compile Include="services\culture\Message.fs" />
+        <Compile Include="services\culture\Query.fs" />
         <Compile Include="services\culture\Command.fs" />
+        <Compile Include="services\embassies\russian\kdmid\Message.fs" />
+        <Compile Include="services\embassies\russian\kdmid\Query.fs" />
+        <Compile Include="services\embassies\russian\kdmid\Command.fs" />
+        <Compile Include="services\embassies\russian\midpass\Query.fs" />
         <Compile Include="services\embassies\russian\Service.fs" />
-        <Compile Include="services\producer\culture\payloads\Text.fs" />
-        <Compile Include="services\producer\culture\payloads\ButtonsGroup.fs" />
-        <Compile Include="services\producer\culture\Command.fs" />
-        <Compile Include="services\producer\embassies\russian\Service.fs" />
-        <Compile Include="services\consumer\culture\Query.fs" />
-        <Compile Include="services\consumer\culture\Command.fs" />
-        <Compile Include="services\consumer\embassies\russian\kdmid\Query.fs" />
-        <Compile Include="services\consumer\embassies\russian\kdmid\Command.fs" />
-        <Compile Include="services\consumer\embassies\russian\kdmid\Instruction.fs" />
-        <Compile Include="services\consumer\embassies\russian\midpass\Query.fs" />
-        <Compile Include="services\consumer\embassies\russian\Service.fs" />
-        <Compile Include="services\consumer\embassies\Service.fs" />
-        <Compile Include="services\consumer\users\Service.fs" />
+        <Compile Include="services\embassies\Service.fs" />
+        <Compile Include="services\users\Service.fs" />
         <Compile Include="controllers\culture\Culture.fs" />
         <Compile Include="controllers\users\Users.fs" />
         <Compile Include="controllers\embassies\Embassies.fs" />
